--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <!--text----------------------->
 		<div class="text-container">
 			<p>Hello,</p>
-		    <p>I&#8217;m GITANJALI</p>
+		    <p><span class="im">I&#8217;m</span> GITANJALI</p>
 			<p>B.Tech Elec & Comm Eng  <br>in NIT Warangal</p>
-			<button class="hire-btn">Hire me</button>
-			<button class="down-cv">Download CV</button>
+			<a href="#contact"><button class="hire-btn">Hire me</button></a>
+			<a href="Bandaru_Gitanjali.pdf"><button class="down-cv">Download CV</button></a>
 		</div>
 		<div class="about-container">
 	<!--img-->
@@ -42,8 +42,8 @@
 		<p>Engineering Student & Software Enthusiast</p>
 		<p>Hello,My name is Bandaru Gitanjali. I am a Third year Under Graduate student at NITW pursuing B.Tech in ECE with CGPA:7.77 till 4th semester. I am a Software Enthusiast with knowledge in Programming and Web Development.</p>
 		<p>I am a creative and open-minded person with strong interpersonal skills. I am open to any opportunities in the form of projects or interns. Please contact me if you have any opportunities for me.</p>
-		<button>Hire Me</button>
-		<button>Download CV</button>
+		<a href="#contact"><button>Hire Me</button></a>
+		<a href="Bandaru_Gitanjali.pdf"><button>Download CV</button></a>
 		</div>
 	</div>
 	<!--services-container---------------------------->
@@ -85,18 +85,16 @@
 	 Mail: gitanjalibandaru55555@gmail.com</p>
 	 <!--social-->
 	<div class="social-icons">
-	<a href="#"><i class="fab fa-facebook-f"></i></a>
-	<a href="#"><i class="fab fa-twitter"></i></a>
-	<a href="#"><i class="fab fa-instagram"></i></a>
-	<a href="#"><i class="fab fa-youtube"></i></a>
+	<a href="https://www.facebook.com/bandaru.gitanjali.1"><i class="fab fa-facebook-f"></i></a>
+	<a href="https://www.linkedin.com/in/bandaru-gitanjali-253b181b7"><i class="fab fa-linkedin"></i></a>
+	<a href="https://www.instagram.com/bandarugitanjali/"><i class="fab fa-instagram"></i></a>
 	</div>
 </footer>
 	<!--social-attach-bar-->
 	<div class="social">
-	<a href="#"><i class="fab fa-facebook-f"></i></a>
-	<a href="#"><i class="fab fa-twitter"></i></a>
-	<a href="#"><i class="fab fa-instagram"></i></a>
-	<a href="#"><i class="fab fa-youtube"></i></a>
+	<a href="https://www.facebook.com/bandaru.gitanjali.1"><i class="fab fa-facebook-f"></i></a>
+	<a href="https://www.linkedin.com/in/bandaru-gitanjali-253b181b7"><i class="fab fa-linkedin"></i></a>
+	<a href="https://www.instagram.com/bandarugitanjali/"><i class="fab fa-instagram"></i></a>
 	</div>
 
 	
