--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 			<div class="box-1">
 			<span>1</span>
 			<p class="heading">Programming</p>
-			<p class="details">C, C++, HTML, CSS, Javascript<br>Have a sound knowledge in the abouve mentioned programming languages.</p>
+			<p class="details">C, C++, HTML, CSS, Javascript<br>Have a sound knowledge in the above mentioned programming languages.</p>
 			<button>Read More</button>
 			</div>
 	   <!--2------------->
 			<div class="box-2">
 			<span>2</span>
 			<p class="heading">Databases</p>
-			<p class="details">SQL, MySQL<br>Have beginner knowledge in the abouve mentioned database languages.</p>
+			<p class="details">SQL, MySQL<br>Have beginner knowledge in the above mentioned database languages.</p>
 			<button>Read More</button>
 			</div>
 		<!--3------------->
